--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,7 @@
 html {
   box-sizing: border-box;
+  font-family: "PT Sans", sans-serif;
+  font-family: "PT Serif", serif;
 }
 
 *, *::before, *::after {
@@ -9,15 +11,18 @@ html {
 /*font-family: "PT Sans", sans-serif;
 font-family: "PT Serif", serif;*/
 
-
 h1, h2 {
   font-family: "PT Sans", sans-serif;
-  color: #8f2440;
+  color: #3f1622;
 }
 
 nav ol {
   font-family: "PT Sans", sans-serif;
   color: #8f2440;
+}
+
+img {
+  width: 100%;
 }
 
 body {
