Add line weight, list style and font weight

--- a/css/main.css
+++ b/css/main.css
@@ -13,10 +13,12 @@ font-family: "PT Serif", serif;*/
 
 h1, h2 {
   font-family: "PT Sans", sans-serif;
+  font-weight: bold;
   color: #3f1622;
 }
 
 nav ol {
+  list-style-type: none;
   font-family: "PT Sans", sans-serif;
   color: #8f2440;
 }
@@ -27,4 +29,5 @@ img {
 
 body {
   background-color: #c9b5ab;
+  line-height: 1.5;
 }
