--- a/css/main.css
+++ b/css/main.css
@@ -23,11 +23,15 @@ nav ol {
   color: #8f2440;
 }
 
+body {
+  background-color: #c9b5ab;
+  line-height: 1.5;
+}
+
 img {
   width: 100%;
 }
 
-body {
-  background-color: #c9b5ab;
-  line-height: 1.5;
+main {
+
 }
