--- a/css/main.css
+++ b/css/main.css
@@ -32,6 +32,19 @@ img {
   width: 100%;
 }
 
-main {
+figcaption {
+  font-family: "PT Serif", serif;
+  color: #222;
+  font-style: italic;
+}
 
+main p {
+  font-family: "PT Serif", serif;
+  font-weight: bold;
+  color: #222;
+}
+
+main p:first-child {
+  font-family: "PT Serif", serif;
+  font-weight: normal;
 }
