--- a/css/main.css
+++ b/css/main.css
@@ -24,6 +24,11 @@ nav ol {
   color: #8f2440;
 }
 
+ol a:hover {
+  color: #3f1622;
+
+}
+
 body {
   background-color: #c9b5ab;
   line-height: 1.5;
@@ -72,7 +77,7 @@ p {
   font-style: italic;
 }
 
- dl dt {
-   font-family: "PT Serif", serif;
-   font-weight: bold;
- }
+dl dt {
+  font-family: "PT Serif", serif;
+  font-weight: bold;
+}
