--- a/css/main.css
+++ b/css/main.css
@@ -34,14 +34,26 @@ body {
   line-height: 1.5;
 }
 
+
 img {
   width: 100%;
+  margin: 0;
+  padding: 0 40px;
+}
+
+figure {
+  margin: 0;
+  padding: 0;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 figcaption {
   font-family: "PT Serif", serif;
+  font-size: .8rem;
   color: #222;
   font-style: italic;
+  text-align: center;
 }
 
 main p {
